Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI708NET.CS


        private static class BTI708_32
        {
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChClear(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChGetCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_ChGetCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChGetInfo@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChIs708@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChIs708(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChIsRcv@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChIsRcv(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChIsXmt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChIsXmt(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_ChPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChPauseCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChResume@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_ChResume(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChStop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChSyncDefine@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ChTriggerDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetAngle@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetAngle(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetAngleFl@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldGetAngleFl(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetControlAccept@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetControlAccept(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetData(Int32 binnum, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetDataAccept@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetDataAccept(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetFaults@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetFaults(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetGain@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldGetGain(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetLabel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetLabel(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetMode@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetMode(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetRange@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldGetRange(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetTilt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetTilt(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldGetTiltFl@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldGetTiltFl(UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutAngle@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutAngle(UInt16 value, ref UInt16 buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutAngleFl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldPutAngleFl(Single angle, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutControlAccept@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutControlAccept(UInt16 value, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutData(UInt16 value, Int32 binnum, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutDataAccept@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutDataAccept(UInt16 value, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutFaults@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutFaults(UInt16 value, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutGain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldPutGain(Int32 gain, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutLabel@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutLabel(UInt16 value, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutMode@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutMode(UInt16 value, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutRange@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldPutRange(Int32 range, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutTilt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutTilt(UInt16 value, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_FieldPutTiltFl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldPutTiltFl(Single tilt, UInt16[] buf);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgBlockRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgBlockRd(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgBlockWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgBlockWr(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgDataRd(UInt16[] buf, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgDataWr(UInt16[] buf, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgIsAccessed@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgIsAccessed(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgSyncDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgTriggerDefine@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgVarDataRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgVarDataRd(UInt16[] buf, ref Int32 bitcount, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_MsgVarDataWr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgVarDataWr(UInt16[] buf, Int32 bitcount, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI708.DLL", EntryPoint = "_BTI708_ParamAmplitudeConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ParamAmplitudeConfig(UInt32 configval, UInt16 dacval, Int32 channum, IntPtr handleval);
